packages/infra/ansible/roles/deployment/templates/kubemanifests/eventsApp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-app-deployment
  labels:
    app: events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          imagePullPolicy: Always
          image: localhost:30555/events:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: events
  labels:
    app: events
spec:
  type: NodePort
  ports:
    - name: events
      nodePort: 30100
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: events
