packages/infra/ansible/roles/deployment/templates/kubemanifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: events-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /(api/.*)
            backend:
              serviceName: events
              servicePort: 5000
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: client
              servicePort: 80
---
